@@ -1,1 +1,10 @@
 # kstreams-rocksdb-tester
+
+This application must be executed using these JVM flags:
+
+```shell
+export JAVA_HOME=$(/usr/libexec/java_home -v 17.0)
+java --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED -jar target/kstreams-rocksdb-tester-1.0-SNAPSHOT-jar-with-dependencies.jar
+```
+
+# TODO: Add description
